# pyinstaller-use-example

./: .gitignore  README.md  app.spec  pyproject.toml
app/: __main__.py
cool_lib/: __init__.py
