[tool.poetry]
name = "pyinstaller-use"
version = "0.1.0"
description = ""
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyinstaller = {version = "^4.3", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
installer = ["pyinstaller"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
